public interface IDetermineIntention
{
    public BaseEnemy.MoveData DetermineIntention();
}